# DataVisualizationBook

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  environment.yml  genindex.html  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
.github/workflows/: ci.yml  deploy.yml
DataVis_JB/: README.md  _config.yml  _toc.yml  environment.yml  importance_of_data_vis.ipynb  intro.md
DataVis_JB/chapters/: chart_types.ipynb  dimensionality_reduction.ipynb  exercises.ipynb  importance_of_data_vis.ipynb  matplotlib_manipulations.ipynb  solutions.ipynb  tutorial.ipynb
_build/.doctrees/: README.doctree  environment.pickle
_build/html/: .buildinfo  README.html  genindex.html  objects.inv  search.html  searchindex.js
_sources/: README.md
_sources/chapters/: 00_intro.md  01_importance_of_data_vis.ipynb  02_chart_types.ipynb  06_tutorial.ipynb
_static/: general.css
chapters/: 00_intro.html  00_intro.md  01_importance_of_data_vis.html  01_importance_of_data_vis.ipynb  02_chart_types.html  02_chart_types.ipynb  03_matplotlib_manipulations.html  04_dimensionality_reduction.html  05_dos.html  06_tutorial.html  06_tutorial.ipynb  08_bibliography.html  chart_types.ipynb  dimensionality_reduction.ipynb  exercises.ipynb  exercises_intro.md  importance_of_data_vis.ipynb  intro.md  solutions.ipynb
chapters/data/: country_coordinates.csv  manufacturers.csv
chapters/exercises/: 01_intro.html  01_intro.md  02_exercises.html  02_exercises.ipynb  03_solutions.html  03_solutions.ipynb  utils.py
utils/: utils.py
(+51 files in other folders)
